[gd_scene load_steps=7 format=3 uid="uid://mks7kbl60y3r"]

[ext_resource type="LabelSettings" uid="uid://bqcwde2g5fr0b" path="res://assets/lg_48_gr.tres" id="1_4aka1"]
[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_bjp4m"]
[ext_resource type="LabelSettings" uid="uid://xkn41xdi3smd" path="res://assets/98_bl.tres" id="2_i426v"]
[ext_resource type="FontFile" uid="uid://b8sgig0vcc5fw" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_hcjlp"]
[ext_resource type="AudioStream" uid="uid://dj81mgm1nk5db" path="res://assets/audio/jazzyfrenchy.mp3" id="4_hmv4c"]

[sub_resource type="LabelSettings" id="LabelSettings_b3810"]
font = ExtResource("3_hcjlp")
font_size = 48
font_color = Color(0, 0.270588, 0.701961, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.368627)

[node name="Game UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bjp4m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL 99"
label_settings = ExtResource("1_4aka1")

[node name="AttemptsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ATTEMPTS 999"
label_settings = ExtResource("1_4aka1")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("2_i426v")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "PRESS SPACE"
label_settings = SubResource("LabelSettings_b3810")
horizontal_alignment = 1

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hmv4c")
